--- a/Enigma-JS/src/pages/PasswordMenu.module.css
+++ b/Enigma-JS/src/pages/PasswordMenu.module.css
@@ -127,5 +127,52 @@ td:hover{
 }
 
 .createPasswordButton:hover{
-  background-color: yellow;
+  background-color: rgb(215, 250, 30);
+}
+
+.searchbarContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  height: 50px;
+}
+
+.searchbarInput {
+  display: inline-block;
+  justify-content: center;
+  margin: 0 auto;
+  appearance: none;
+  padding: 5px;
+  background-color: #f0f0f0;
+  border: none;
+  border-radius: 10px;
+  font-size: 13px;
+  height: 20px;
+  width: 250px;
+  color: black;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1), 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.searchbarInput::placeholder{
+  color: rgb(100, 100, 100);
+}
+
+.searchButton{
+  display: inline-block;
+  margin: 5px auto;
+  margin-left: 8px;
+  width: 35px;
+  height: 35px;
+  padding: 2px;
+  color: white;
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1), 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #1565C0;
+}
+
+.searchButton:hover{
+  background-color: #2979FF;
 }
